# TeConnectiviy

./: .replit  app.yaml  home.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
attached_assets/: Pasted-import-streamlit-as-st-import-pandas-as-pd-from-io-import-BytesIO-from-PIL-import-Image-import-o-1744898372731.txt  calculator.py  config.toml  home.py  main.py  pyproject.toml
pages/: calculator.py
utils/: cost_formulas.py
